Added header to the site

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 	</head>
 
 	<body>
-		<header></header>
+		<header>
+			<h1 class="header__text">Ticketmaster</h1>
+			<h2 class="header__city">Bergen</h2>
+		</header>
 
-		<main></main>
+		<main>
+			
+		</main>
 
 		<footer></footer>
 		
