--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</header>
 
 		<main>
-			<div class="events_container" id="event-container"></div>
+			<div class="event_container" id="event-container"></div>
 		</main>
 
 		<footer></footer>
