Changed class names

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<body>
 		<header class="header grid">
-			<h1 class="header__text grid__column--12">Ticketmaster</h1>
-			<h2 class="header__city">Bergen</h2>
+			<h1 class="header__text grid__column--8">Ticketmaster</h1>
+			<h2 class="header__city grid__column--4">Bergen</h2>
 		</header>
 
 		<main>
